--- a/index.html
+++ b/index.html
@@ -2,86 +2,97 @@
 <meta charset="utf-8"/>
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
 <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Space+Grotesk%3Awght%40400%3B500%3B700" onload="this.rel='stylesheet'" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 <title>Stitch Design</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <style type="text/tailwindcss">
       :root {
         --primary-color: #195de5;
-        --secondary-color: #f8f9fc;
+        --secondary-color: #f0f6ff;
         --text-primary: #0e121b;
-        --text-secondary: #525866;
-        --border-color: #e7ebf3;
+        --text-secondary: #4a5568;
+        --background-light: #f8f9fc;
+        --border-light: #e7ebf3;
       }
       body {
         font-family: "Space Grotesk", "Noto Sans", sans-serif;
       }
+      .material-icons {
+        font-size: inherit;}
     </style>
 </head>
-<body>
-<div class="relative flex size-full min-h-screen flex-col bg-[var(--secondary-color)] group/design-root overflow-x-hidden">
+<body class="bg-[var(--background-light)] text-[var(--text-primary)]">
+<div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
 <div class="layout-container flex h-full grow flex-col">
-<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[var(--border-color)] px-10 py-4 shadow-sm">
-<div class="flex items-center gap-4 text-[var(--text-primary)]">
-<div class="flex items-center justify-center rounded-lg bg-[var(--primary-color)] p-2">
-<svg class="size-6 text-white" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-[var(--border-light)] px-6 md:px-10 py-4 bg-white shadow-sm">
+<div class="flex items-center gap-3 text-[var(--text-primary)]">
+<div class="text-[var(--primary-color)]">
+<svg class="h-8 w-8" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
 <path clip-rule="evenodd" d="M39.475 21.6262C40.358 21.4363 40.6863 21.5589 40.7581 21.5934C40.7876 21.655 40.8547 21.857 40.8082 22.3336C40.7408 23.0255 40.4502 24.0046 39.8572 25.2301C38.6799 27.6631 36.5085 30.6631 33.5858 33.5858C30.6631 36.5085 27.6632 38.6799 25.2301 39.8572C24.0046 40.4502 23.0255 40.7407 22.3336 40.8082C21.8571 40.8547 21.6551 40.7875 21.5934 40.7581C21.5589 40.6863 21.4363 40.358 21.6262 39.475C21.8562 38.4054 22.4689 36.9657 23.5038 35.2817C24.7575 33.2417 26.5497 30.9744 28.7621 28.762C30.9744 26.5497 33.2417 24.7574 35.2817 23.5037C36.9657 22.4689 38.4054 21.8562 39.475 21.6262ZM4.41189 29.2403L18.7597 43.5881C19.8813 44.7097 21.4027 44.9179 22.7217 44.7893C24.0585 44.659 25.5148 44.1631 26.9723 43.4579C29.9052 42.0387 33.2618 39.5667 36.4142 36.4142C39.5667 33.2618 42.0387 29.9052 43.4579 26.9723C44.1631 25.5148 44.659 24.0585 44.7893 22.7217C44.9179 21.4027 44.7097 19.8813 43.5881 18.7597L29.2403 4.41187C27.8527 3.02428 25.8765 3.02573 24.2861 3.36776C22.6081 3.72863 20.7334 4.58419 18.8396 5.74801C16.4978 7.18716 13.9881 9.18353 11.5858 11.5858C9.18354 13.988 7.18717 16.4978 5.74802 18.8396C4.58421 20.7334 3.72865 22.6081 3.36778 24.2861C3.02574 25.8765 3.02429 27.8527 4.41189 29.2403Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 </div>
 <h2 class="text-[var(--text-primary)] text-xl font-bold leading-tight tracking-[-0.015em]">DB Project</h2>
 </div>
-<div class="flex flex-1 justify-end items-center gap-6">
-<nav class="hidden md:flex items-center gap-6">
-<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Dashboard</a>
-<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Projects</a>
-<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Find Pros</a>
-<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Inspiration</a>
-<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Advice</a>
+<nav class="hidden md:flex items-center gap-8">
+<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Home</a>
+<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">Services</a>
+<a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal transition-colors" href="#">About</a>
 </nav>
-<button class="flex items-center justify-center rounded-full h-10 w-10 bg-white hover:bg-gray-100 text-[var(--text-secondary)] hover:text-[var(--primary-color)] transition-colors">
-<svg fill="currentColor" height="24px" viewBox="0 0 256 256" width="24px" xmlns="http://www.w3.org/2000/svg">
-<path d="M221.8,175.94C216.25,166.38,208,139.33,208,104a80,80,0,1,0-160,0c0,35.34-8.26,62.38-13.81,71.94A16,16,0,0,0,48,200H88.81a40,40,0,0,0,78.38,0H208a16,16,0,0,0,13.8-24.06ZM128,216a24,24,0,0,1-22.62-16h45.24A24,24,0,0,1,128,216ZM48,184c7.7-13.24,16-43.92,16-80a64,64,0,1,1,128,0c0,36.05,8.28,66.73,16,80Z"></path>
-</svg>
+<div class="flex items-center gap-3">
+<button class="flex items-center justify-center rounded-full h-10 w-10 bg-[var(--secondary-color)] text-[var(--primary-color)] hover:bg-[var(--border-light)] transition-colors">
+<span class="material-icons text-xl">notifications</span>
 </button>
-<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 border-2 border-white shadow-md" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAxrJNQ7GTFYeOI8pntH0M6rlbjMhkwYoDBZTd6UyZxBCa2OeHyk-EmfRIq1odXf4H8G6-dM-ngtZa9nEjLfjaaGBGQYOoXT2O2Dkgas0VdiOyBTNKx_diGwXGY5jqhl82c9oNhNduxk7wpjNqxAWGJLNC5D_K3hxsIQb5imoS-yY4ILc8yPlBz4yxF2mCNHM9c5ZCIohjL4Tap8qkgqLN_ccxJbqMsP1HJ1zSyP776XcHgjlNmhQrYcMhYtS2Qf1Z-b8cY2Izh_YG_");'></div>
-<button class="md:hidden flex items-center justify-center rounded-md h-10 w-10 bg-white hover:bg-gray-100 text-[var(--text-secondary)] hover:text-[var(--primary-color)] transition-colors">
-<svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-<line x1="3" x2="21" y1="12" y2="12"></line>
-<line x1="3" x2="21" y1="6" y2="6"></line>
-<line x1="3" x2="21" y1="18" y2="18"></line>
-</svg>
+<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 border-2 border-[var(--primary-color)]" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAsgBXO7CuiJhaRho-HJx5QhZMMRM4XyIOETGg0YMj-C6hAiUwmRbPEDzrNbWI6iiS8fWHpFZ2KDO1K3T7HQiVwwIG--Z70ChcTbguojslplMZGKwiwK3IZHpBx071e32Q5JB-lFUG1BUtwYnp4XyeSGWndppge5f6DAOXrXQ6Ie700TFuD_OP29ggcrIX3x9naaqo-ReQ8RgylOuJ744WVhXLhY90jxWpwDEY9TG__0GvOGMtmBd2C0baTWCoqGdxAqBJL95Rsaqaw");'></div>
+<button class="md:hidden flex items-center justify-center rounded-md h-10 w-10 bg-[var(--secondary-color)] text-[var(--primary-color)] hover:bg-[var(--border-light)] transition-colors">
+<span class="material-icons text-2xl">menu</span>
 </button>
 </div>
 </header>
-<main class="px-6 sm:px-10 md:px-20 lg:px-40 flex flex-1 justify-center py-8 lg:py-12">
-<div class="layout-content-container flex flex-col max-w-4xl flex-1">
-<div class="mb-8">
-<h1 class="text-[var(--text-primary)] tracking-tight text-4xl sm:text-5xl font-bold leading-tight">About Us</h1>
+<main class="flex-1 flex justify-center py-8 md:py-12 px-4 sm:px-6 lg:px-8">
+<div class="w-full max-w-2xl bg-white shadow-xl rounded-lg p-6 md:p-10">
+<h1 class="text-3xl md:text-4xl font-bold text-[var(--text-primary)] mb-8 text-center">Contact Us</h1>
+<div class="space-y-6">
+<a class="flex items-center gap-4 p-4 border border-[var(--border-light)] rounded-lg hover:shadow-md transition-shadow cursor-pointer group" href="mailto:support@dbproject.com">
+<div class="flex items-center justify-center rounded-full bg-[var(--secondary-color)] text-[var(--primary-color)] shrink-0 size-12 group-hover:bg-[var(--primary-color)] group-hover:text-white transition-colors duration-300">
+<span class="material-icons text-2xl">email</span>
 </div>
-<div class="space-y-8 text-[var(--text-secondary)] text-base sm:text-lg leading-relaxed">
-<p>
-                At DB Project, we're dedicated to connecting homeowners with skilled professionals for their home improvement projects. Our platform simplifies the process of
-                finding, hiring, and managing projects, ensuring a seamless experience from start to finish. We believe in transparency, quality, and customer satisfaction, and we're
-                committed to providing a reliable and trustworthy service for both homeowners and professionals.
-              </p>
-<div class="w-full @container">
-<div class="w-full aspect-video sm:aspect-[16/9] md:aspect-[2/1] lg:aspect-[3/2] rounded-xl overflow-hidden shadow-lg">
-<div class="w-full h-full bg-center bg-no-repeat bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAhGdyavdcE1bB7qKqM1iSQLSGXKMY6zP9IvILQl_V5Te6v4oHxlfYtEacuqbC8V-eNMltZZY5FozXdfw1tZt52cGRdFp7ta_62VmcaqrX0VMEapLakdRogOmbTlrOsSBfQ3aVpDZ1g9J28DOetx1X-CHdoV4zAMvSaAlI3ebVSP1vdMTV8p5mnUHYGvWmXqu9HZTz9kZibMlRY1YrUYuEB04R4mvPhLh53FeO6udH_bMkkEG2dHn38oOpCdLpaD3U6qnsXWbmBvlMk");'></div>
+<div class="flex-1">
+<p class="text-sm text-[var(--text-secondary)]">Email Address</p>
+<p class="text-lg font-medium text-[var(--text-primary)] group-hover:text-[var(--primary-color)] transition-colors">support@dbproject.com</p>
 </div>
+<span class="material-icons text-[var(--text-secondary)] group-hover:text-[var(--primary-color)] transition-colors opacity-0 group-hover:opacity-100">arrow_forward_ios</span>
+</a>
+<a class="flex items-center gap-4 p-4 border border-[var(--border-light)] rounded-lg hover:shadow-md transition-shadow cursor-pointer group" href="tel:+1-555-123-4567">
+<div class="flex items-center justify-center rounded-full bg-[var(--secondary-color)] text-[var(--primary-color)] shrink-0 size-12 group-hover:bg-[var(--primary-color)] group-hover:text-white transition-colors duration-300">
+<span class="material-icons text-2xl">call</span>
 </div>
-<p>
-                Our team consists of experienced professionals passionate about home improvement and technology. We work tirelessly to maintain a high standard of service,
-                continuously improving our platform based on user feedback and industry trends. We're proud to be a part of the home improvement community and look forward to helping
-                you achieve your project goals.
-              </p>
-<p>
-                For any inquiries or support, please contact us at <a class="text-[var(--primary-color)] hover:underline font-medium" href="mailto:support@dbproject.com">support@dbproject.com</a>. We're here to assist you every step of the way.
-              </p>
+<div class="flex-1">
+<p class="text-sm text-[var(--text-secondary)]">Mobile Number</p>
+<p class="text-lg font-medium text-[var(--text-primary)] group-hover:text-[var(--primary-color)] transition-colors">+1-555-123-4567</p>
 </div>
+<span class="material-icons text-[var(--text-secondary)] group-hover:text-[var(--primary-color)] transition-colors opacity-0 group-hover:opacity-100">arrow_forward_ios</span>
+</a>
+<a class="flex items-center gap-4 p-4 border border-[var(--border-light)] rounded-lg hover:shadow-md transition-shadow cursor-pointer group" href="https://wa.me/15559876543" rel="noopener noreferrer" target="_blank">
+<div class="flex items-center justify-center rounded-full bg-[var(--secondary-color)] text-[var(--primary-color)] shrink-0 size-12 group-hover:bg-[var(--primary-color)] group-hover:text-white transition-colors duration-300">
+<svg class="transition-colors duration-300" fill="currentColor" height="24px" viewBox="0 0 256 256" width="24px" xmlns="http://www.w3.org/2000/svg">
+<path d="M187.58,144.84l-32-16a8,8,0,0,0-8,.5l-14.69,9.8a40.55,40.55,0,0,1-16-16l9.8-14.69a8,8,0,0,0,.5-8l-16-32A8,8,0,0,0,104,64a40,40,0,0,0-40,40,88.1,88.1,0,0,0,88,88,40,40,0,0,0,40-40A8,8,0,0,0,187.58,144.84ZM152,176a72.08,72.08,0,0,1-72-72A24,24,0,0,1,99.29,80.46l11.48,23L101,118a8,8,0,0,0-.73,7.51,56.47,56.47,0,0,0,30.15,30.15A8,8,0,0,0,138,155l14.61-9.74,23,11.48A24,24,0,0,1,152,176ZM128,24A104,104,0,0,0,36.18,176.88L24.83,210.93a16,16,0,0,0,20.24,20.24l34.05-11.35A104,104,0,1,0,128,24Zm0,192a87.87,87.87,0,0,1-44.06-11.81,8,8,0,0,0-6.54-.67L40,216,52.47,178.6a8,8,0,0,0-.66-6.54A88,88,0,1,1,128,216Z"></path>
+</svg>
+</div>
+<div class="flex-1">
+<p class="text-sm text-[var(--text-secondary)]">WhatsApp</p>
+<p class="text-lg font-medium text-[var(--text-primary)] group-hover:text-[var(--primary-color)] transition-colors">+1-555-987-6543</p>
+</div>
+<span class="material-icons text-[var(--text-secondary)] group-hover:text-[var(--primary-color)] transition-colors opacity-0 group-hover:opacity-100">arrow_forward_ios</span>
+</a>
+</div>
+<p class="text-center text-sm text-[var(--text-secondary)] mt-10">
+              We typically respond within 24 hours. For urgent matters, please call us directly.
+            </p>
 </div>
 </main>
-<footer class="border-t border-solid border-b-[var(--border-color)] py-8 px-10 text-center text-[var(--text-secondary)] text-sm">
-<p>© 2024 DB Project. All rights reserved.</p>
+<footer class="text-center py-6 border-t border-[var(--border-light)] bg-white">
+<p class="text-sm text-[var(--text-secondary)]">© 2024 DB Project. All rights reserved.</p>
 </footer>
 </div>
 </div>
